# shipyard

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
agents/: README.md  claude_agent.py  launch.sh  test_agent.py
agents/profiles/: architect.yaml  backend.yaml  docs.yaml  frontend.yaml  qa.yaml
configs/: constraints.yaml  default.yaml
docs/: agent-sdk-guide.md  architecture.md  guide.md  howto_example_project.md  human-workflow.md  todo.md  vision.md
scripts/: e2e_test.py
sdk/python/: README.md  setup.py
sdk/typescript/: README.md  package-lock.json  package.json
src/: __init__.py  __main__.py
src/api/: __init__.py  app.py  dependencies.py  schemas.py
src/cli/: __init__.py  app.py  formatters.py  runtime.py
src/constraints/: __init__.py  checker.py  loader.py  models.py  signal.py
src/coordination/: __init__.py  claims.py  merge.py  models.py  queue.py
tests/: test_agent_status.py  test_api.py  test_behavioral_diff.py  test_cli.py  test_config_api.py  test_constraints.py  test_coordination.py  test_goals.py  test_intent.py  test_kill_switch.py  test_leases.py  test_llm.py  test_notifications.py  test_notifications_integration.py  test_pipeline.py  test_projects.py  test_projects_api.py  test_real_runners.py  test_routing.py  test_routing_integration.py  test_sandbox.py  test_sandbox_backends.py  test_sandbox_parser.py  test_sdk.py  test_storage.py  test_storage_integration.py  test_trust.py  test_validation.py  test_workspace.py  test_worktree_integration.py  test_worktrees.py
todolist/: __init__.py  __main__.py  app.py  cli.py  models.py
(+84 files in other folders)
